--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,target-densitydpi=medium-dpi,viewport-fit=cover">
 	<title>굿즈 계산기</title>
-	<link rel="stylesheet" href="css/goods_calculator.css">
+	<link rel="stylesheet" href="src/css/goods_calculator.css">
 </head>
 <body>
 <div id="container">
