--- a/src/goods_calculator.html
+++ b/src/goods_calculator.html
@@ -1260,7 +1260,7 @@
 	</div>
 </div>
 </body>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script type="text/javascript">
 
     let select_num = 0;
